--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 pdftk_test:
     path:     /pdftk/{name}
-    defaults: { _controller: Mediavince\Bundle\PdftkBundle:Default:pdftk }
+    defaults: { _controller: SpecShaper\PdftkBundle:Default:pdftk }
