Remvoed Symfony 3.2 depenedncy

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "MIT"
     ],
     "require" : {
-        "php": ">=7.1",
-        "symfony/symfony": "^3.2"
+        "php": ">=7.1"
     },
     "autoload" : {
         "psr-4": { "SpecShaper\\PdftkBundle\\": "" }
